--- a/Pertemuan2/nbproject/project.properties
+++ b/Pertemuan2/nbproject/project.properties
@@ -28,14 +28,20 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Pertemuan2.jar
+dist.jar=${dist.dir}/pemkom.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Pertemuan2
+dist.jlink.output=${dist.jlink.dir}/pemkom
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.Gson.classpath}:\
+    ${libs.junit-4.8.2.classpath}:\
+    ${libs.currency.classpath}:\
+    ${libs.log4j.classpath}:\
+    ${libs.log4j12.classpath}:\
+    ${libs.slf4-api-1.6.1.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -70,7 +76,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Pertemuan2
+jlink.launcher.name=pemkom
 main.class=InventoryManagerGUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
