--- a/pemkom3/nbproject/project.properties
+++ b/pemkom3/nbproject/project.properties
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=pemkom3
-main.class=Mutlithread.PrayerReminder
+main.class=pemkom3.Pemkom3
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
